test_programs/compile_failure/overlapping_mod/src/main.nr
mod foo;

use foo::bar;

fn main() { 
  assert(bar());
}
